assets/scss/components/_analytics.scss
/* ... */
// analytic table
.btl-analytic-table-wrapper {
	padding: 20px 15px;
	border-radius: 8px;
	background: #fff;

	.rdt_TableHeader {
		display: none;
		.sc-fFubgz {
			font-weight: 600;
		}
	}
	> header {
		justify-content: flex-start;
		padding-left: 0;
	}
	.btl-click-filter {
		margin-bottom: 20px;
		display: flex;
		align-items: center;
		justify-content: space-between;
		width: 100%;

		input[type='text'] {
			border: 1px solid #d9e1f4;
			background: #f1f5fd;
			height: 40px;
			border-radius: 8px 0 0 8px;
			border-right: 0px;
			outline: none;
			box-shadow: none;
			min-width: 240px;
			padding-left: 15px;
			margin-right: 0;
		}
		form {
			display: flex;
		}
		.btl-search-button {
			height: 40px;
			display: inline-flex;
			justify-content: center;
			align-items: center;
			padding: 0 12px 0 20px;
			background-color: #f1f5fd;
			border-color: #ebebeb;
			border-style: solid;
			border-width: 1px;
			border-left-width: 1px;
			border-left-width: 0px;
			outline: none;
			box-shadow: none;
			border-radius: 0 8px 8px 0;
			color: #fff;
			cursor: pointer;
			transition: background 0.3s ease-in-out;
			margin-right: 5px;

			img {
				width: 25px;
			}
		}
		.btl-search-button:nth-child(3) {
			border-radius: 4px;
		}
		.btl-search-button.btl-search-reset {
			background-color: #2673ff !important;
			padding: 0 15px !important;
		}
		a.btl-go-back-btn {
			text-decoration: none;
			border: 1px solid #ebebeb;
			border-radius: 4px 0 0 4px;
			margin-right: 5px;
			padding: 8px 10px;
			transition: all 0.3s ease-in-out;
			color: $dark;

			&:hover {
				background-color: #0742e7;
				color: $white;
				border-color: transparent;
			}
		}

		.rmsc .dropdown-container {
			border-radius: 8px;
			border: 1px solid #d9e1f4;
			background-color: #f1f5fd;

			&:focus-within {
				box-shadow: unset;
			}
		}
	}
	.rdt_Table {
		.rdt_TableHead {
			border-top: 1px solid #d9e1f4;
			border-bottom: 1px solid #d9e1f4;

			> .rdt_TableHeadRow {
				background-color: #fbfcff;
				border-bottom: 0;

				.column-target_url > div {
					color: #19285d;
					font-style: normal;
					font-weight: 600;
				}
			}
		}
		.rdt_TableBody {
			> .rdt_TableRow {
				border-bottom: 1px solid #d9e1f4;

				&:hover {
					background: #fbfcff;
				}
			}
		}
		.rdt_TableCell {
			padding-top: 5px;
			padding-bottom: 5px;

			> a {
				font-size: 10px;
				color: #2673ff;
				background-color: #e5eeff;
				text-decoration: none;
				padding: 5px;
				border-radius: 5px;
				transition: all 0.1s ease-in-out;
				&:hover {
					background-color: #2673ff !important;
					color: #fff;
				}
			}
			> div {
				font-size: 12px;
			}
		}
		.rdt_TableCol_Sortable {
			color: $dark;
			> div {
				font-size: 14px;
				font-weight: 600;
				color: #252525;
			}
			&:hover {
				color: $dark;
			}
		}
		a {
			color: $dark;
			font-weight: 500;

			&:hover {
				color: $dark;
			}
		}
	}
	.rdt_Pagination {
		.sc-cxFLnm {
			svg {
				display: none;
			}
		}
		> div:last-child {
			button {
				padding: 0px;
				border-radius: 4px;
				height: 24px;
				width: 24px;
				display: flex;
				justify-content: center;
				align-items: center;
				margin: 2px;
				svg {
					height: 20px;
					width: 20px;
					fill: $dark;
				}
				&:disabled {
					svg {
						fill: $secondary;
					}
				}
				&:hover {
					background: #0742e7;
					svg {
						fill: #fff;
					}
				}
			}
		}
	}
	.btl-analytic-link-name {
		display: flex;
		gap: 5px;
		text-decoration: underline;
		// border-bottom: 1px solid rgba(0, 0, 0, 0.3);
		cursor: pointer;
		align-items: center;

		i.btl-analytics {
			font-size: 11px;
			border: 1px solid #000;
			padding: 2px;

			&:before {
				content: '\e920';
			}
		}
	}
	span.pro-badge {
		padding: 0 2px;
		font-size: 6px;
	}
}
.react-calendar {
	border-color: #ebebeb;
}
/* ... */

